# vivarium_public_health

./: .gitignore  .travis.yml  .zenodo.json  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Jenkinsfile  MANIFEST.in  Makefile  README.md  README.rst  get_upstream_branch.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/: CODEOWNERS  pull_request_template.md
ceam_public_health/: cube.py  dataset.py  dataset_manager.py  util.py
ci/: before_install.sh  travis-before-install.sh  travis-test.sh
config/: model_specification.yaml  model_specification_mortality.yaml  model_specification_pipeline_001.yaml  model_specification_pipeline_003.yaml  model_specification_pipeline_004.yaml  model_specification_pipeline_005.yaml
configurations/: fertility_test.json  fertility_test.yaml  hello_world.yaml  no_diarrhea_test.json  opportunistic_sbp_screening.json  opportunistic_sbp_screening.yaml  ors.json  ors.yaml  ors_rewrite.yaml  rota_vaccination_intervention.json  rota_vaccine.yaml  rota_vaccine_branches.yaml  rota_vaccine_intervention.json  unsafe_sanitation_intervention.json  unsafe_sanitation_vaccination_intervention.json
data/: Testfile.csv
docs/: Makefile  conf.py  index.rst  nitpick-exceptions  requirements-doc.txt
notebooks/: pipeline_001_mortality.ipynb  pipeline_002_mortality.ipynb  pipeline_002_mortality_multiprocessing.ipynb  pipeline_003_mortality_fertility.ipynb  pipeline_004_mortality_fertility.ipynb  pipeline_004_mortality_fertility_migration.ipynb  pipeline_004_mortality_immigration.ipynb  (+1 more)
persistant_data/: 304346046.csv  (+4 more)
(+552 files in other folders)
